# emailCanon

./: .gitignore  LICENSE  README.md  TODO  pyproject.toml
.github/workflows/: lint.yml  test.yml
emailcanon/: __init__.py  _types.py  core.py  providers.py
tests/: config.py  edgecases.py  gmail.py  providers.py
