[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "emailcanon"
version = "0.1.0"
description = "A Python library for email canonicalization"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = []

[project.optional-dependencies]
dev = [
    "mypy>=1.10",
    "ruff>=0.4",
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["emailcanon"]

# --- Type checking ---
[tool.mypy]
strict = true
python_version = "3.11"
files = ["emailcanon"]

# --- Linting & formatting ---
[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "ANN", # flake8-annotations (enforce type hints)
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]

[tool.ruff.lint.isort]
known-first-party = ["emailcanon"]

# --- Tests ---
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=emailcanon --cov-report=term-missing"
